--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,11 @@ name = "pypi"
 
 [packages]
 boto3 = "*"
+google-api-python-client = "*"
+google-auth-oauthlib = "*"
 requests = "*"
 twilio = "*"
+sendgrid = "*"
 
 [dev-packages]
 python-lambda-local = "*"
